# Engineering-Thesis

AltiumProject/ZUMO-ROBOT/: DRV8833.SchDoc  MIKROBUS.SchDoc  PSU.SchDoc  PhotoDetectors.SchDoc  RPIPICOW.SchDoc  STM32_schematic.SchDoc  SWD.SchDoc  Templates.PcbLib  USBConn.SchDoc  WS2812bDiode.SchDoc  ZUMO-ROBOT.BomDoc  ZUMO-ROBOT.PrjPcb  ZUMO-ROBOT.PrjPcbStructure  mainSchema.SchDoc  mcu.SchDoc
AltiumProject/ZUMO-ROBOT/Parts/: FT231XS-R.IntLib  Resistor_tmpl.SchLib  STM32G474VET6.IntLib  TPS76133DBVR.IntLib  USB4145-03-0070-C_REVA2.IntLib
AltiumProject/ZUMO-ROBOT/Parts/10Header/AltiumDesigner/: 5-102618-3.LibPkg  5-102618-3.PcbLib  5-102618-3.SchLib  5-102618-3.txt  CONN_102618-3_TEC.step
AltiumProject/ZUMO-ROBOT/Parts/10Header/AltiumDesigner/Project Outputs for 5-102618-3/: 5-102618-3.IntLib
AltiumProject/ZUMO-ROBOT/Parts/AltiumDesigner/: 87215-5_TYC.step  87227-5.txt  PPTC201LFBN-RC.txt
AltiumProject/ZUMO-ROBOT/Parts/ENG_DRV/AltiumDesigner/: DRV8833PWP.LibPkg  DRV8833PWP.PcbLib  DRV8833PWP.SchLib  DRV8833PWP.txt
AltiumProject/ZUMO-ROBOT/Parts/ENG_DRV/AltiumDesigner/Project Outputs for DRV8833PWP/: DRV8833PWP.IntLib
AltiumProject/ZUMO-ROBOT/Parts/FT231XS-R/: FT231XS-R.SchLib  SOP63P599X175-20N.PcbLib
AltiumProject/ZUMO-ROBOT/Parts/FT231XS-R/Project Outputs for FT231XS-R/: FT231XS-R.IntLib
AltiumProject/ZUMO-ROBOT/Parts/LM293150/: LM2931MX-5P0NOPB.LibPkg  LM2931MX-5P0NOPB.PcbLib  LM2931MX-5P0NOPB.SchLib  LM2931MX-5P0NOPB.txt  M08A_TEX.step
AltiumProject/ZUMO-ROBOT/Parts/LM293150/Project Outputs for LM2931MX-5P0NOPB/: LM2931MX-5P0NOPB.IntLib
AltiumProject/ZUMO-ROBOT/Parts/STM32G474VET6/: LQFP100-14x14mm.step  STM32G474VET6.LibPkg  STM32VET6.SchLib  SnapEDApcb.PcbLib  SnapEDAsch.SchLib
AltiumProject/ZUMO-ROBOT/Parts/STM32G474VET6/Project Outputs for STM32G474VET6/: STM32G474VET6.IntLib
AltiumProject/ZUMO-ROBOT/Parts/TPS76133DBVR/: SOT95P280X145-5N.PcbLib  TPS76133DBVR.LibPkg  TPS76133DBVR.SchLib
AltiumProject/ZUMO-ROBOT/Parts/USB4145-03-0070-C_REVA2/: GCT_USB4145-03-0070-C_REVA2.PcbLib  USB4145-03-0070-C_REVA2.SchLib  usb4145-03-0070-c.txt
AltiumProject/ZUMO-ROBOT/Parts/USB4145-03-0070-C_REVA2/Project Outputs for USB4145-03-0070-C_REVA2/: USB4145-03-0070-C_REVA2.IntLib
AltiumProject/ZUMO-ROBOT/Parts/WS2812B/: WS2812B.PcbLib  WS2812B.SchLib
AltiumProject/ZUMO-ROBOT/Parts/ZENER1V8/AltiumDesigner/: MMSZ4678T1G.PcbLib  MMSZ4678T1G.SchLib  MMSZ4678T1G.txt  SOD_8T1G_ONS.step
AltiumProject/ZUMO-ROBOT/Parts/ul_KTIR0711S/AltiumDesigner/: KTIR0711S.LibPkg  KTIR0711S.PcbLib  KTIR0711S.SchLib  KTIR0711S.txt  KTIR0711S_KNB.step
AltiumProject/ZUMO-ROBOT/Parts/ul_LM2903PWRG4/AltiumDesigner/: LM2903PWRG4.LibPkg  LM2903PWRG4.PcbLib  LM2903PWRG4.SchLib  LM2903PWRG4.step  LM2903PWRG4.txt
AltiumProject/ZUMO-ROBOT/Project Outputs for ZUMO-ROBOT/: ZUMO-ROBOT.nsx
AltiumProject/ZUMO-ROBOT/__Previews/: DRV8833.SchDocPreview  MIKROBUS.SchDocPreview  PSU.SchDocPreview  PhotoDetectors.SchDocPreview  RPIPICOW.SchDocPreview  STM32_schematic.SchDocPreview  SWD.SchDocPreview  Sheet1.SchDocPreview  USBConn.SchDocPreview  WS2812bDiode.SchDocPreview  mainSchema.SchDocPreview  mcu.SchDocPreview
dev-dir/ZUMO-ROBOT/: .mxproject  CMakeLists.txt  Makefile  ZUMO-ROBOT.ioc
dev-dir/ZUMO-ROBOT/Application/Inc/: zumoApplication.h
dev-dir/ZUMO-ROBOT/Application/Src/: zumoApplication.c
dev-dir/ZUMO-ROBOT/Core/Inc/: FreeRTOSConfig.h
dev-dir/ZUMO-ROBOT/Core/Src/: main.c  stm32g4xx_hal_msp.c
